--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -53,3 +53,7 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+custom.ideal.strategy.min.price.count = <span style="color:green">Requires minimum 5 prices </span>
+custom.all.strategy.min.price.count = <span style="color:green">No prices added for this product</span>
+custom.amount.currency = <span style="color:orange">$ {0}</span>
