resolved some UI ralated issues

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,6 +54,5 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
-custom.ideal.strategy.min.price.count = <span style="color:green">Requires minimum 5 prices </span>
-custom.all.strategy.min.price.count = <span style="color:green">No prices added for this product</span>
-custom.amount.currency = <span style="color:orange">$ {0}</span>
+custom.ideal.strategy.min.price.count = <span style="color:green">Requires minimum {0} prices </span>
+default.amount.currency = <span style="color:#D2691E">$ {0}</span>
